--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/kodilla_course?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/game_rental?serverTimezone=Europe/Warsaw&useSSL=False&allowPublicKeyRetrieval=true
 spring.datasource.username=GameAdmin
 spring.datasource.password=GamePassword1!
 
