Atlas API initial implementation  & and waaaay to many refactoring for single commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/game_rental?serverTimezone=Eur
 spring.datasource.username=GameAdmin
 spring.datasource.password=GamePassword1!
 
+
+#BOARDGAMEATLAS
+atlas.api.client.id=${ATLAS_CLIENT}
+atlas.api.endpoint.prod=https://api.boardgameatlas.com/api
+
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
