--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
     runtimeOnly 'mysql:mysql-connector-java'
+
+    implementation group: 'com.vaadin', name: 'vaadin', version: '19.0.7'
+
 }
 
 bootJar {
