--- a/Dto/build.gradle
+++ b/Dto/build.gradle
@@ -9,7 +9,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
-    maven { url "https://maven.vaadin.com/vaadin-addons" }
+   // maven { url "https://maven.vaadin.com/vaadin-addons" }
 }
 
 dependencies {
@@ -31,7 +31,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 
-    implementation 'com.vaadin:vaadin-spring-boot-starter'
+   // implementation 'com.vaadin:vaadin-spring-boot-starter'
 
     runtimeOnly 'mysql:mysql-connector-java'
 }
@@ -44,11 +44,11 @@ jar {
     enabled = true
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "com.vaadin:vaadin-bom:14.4.2"
-    }
-}
+//dependencyManagement {
+   // imports {
+    //    mavenBom "com.vaadin:vaadin-bom:14.4.2"
+   // }
+//}
 
 test {
     useJUnitPlatform()
