authentication initially implemented

--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -9,6 +9,7 @@ version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url "https://maven.vaadin.com/vaadin-addons" }
 }
 
 dependencies {
@@ -19,6 +20,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.security:spring-security-config'
+    implementation 'org.springframework.security:spring-security-web'
 
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
@@ -26,6 +29,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.5.15'
+
+    implementation 'com.vaadin:vaadin-spring-boot-starter'
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
@@ -41,6 +46,12 @@ bootJar {
 
 jar {
     enabled = true
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "com.vaadin:vaadin-bom:14.4.2"
+    }
 }
 
 test {
