Mail service initially implemented

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # EMAIL CONFIGURATION
+admin.name=BoardGameRentalCreator
+admin.mail=${MAIL_USERNAME}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=${MAIL_USERNAME}
