--- a/Backend/build.gradle
+++ b/Backend/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     compile 'org.springframework.boot:spring-boot-starter-mail'
 
+    //compile 'io.springfox:springfox-swagger2:3.0.0'
+    //compile 'io.springfox:springfox-swagger-ui:3.0.0'
+
     implementation 'com.vaadin:vaadin-spring-boot-starter'
 
     compileOnly 'org.projectlombok:lombok:1.18.20'
