--- a/Frontend/build.gradle
+++ b/Frontend/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 
+    //compile 'io.springfox:springfox-swagger2:3.0.0'
+   // compile 'io.springfox:springfox-swagger-ui:3.0.0'
+
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
@@ -30,7 +33,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.5.15'
 
-    implementation 'com.vaadin:vaadin-spring-boot-starter:17.0.1'
+    implementation 'com.vaadin:vaadin-spring-boot-starter:20.0.3'
 
     runtimeOnly 'mysql:mysql-connector-java'
 }
